C2: Access to [].clone from interfaces fails

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 8u152, 9
    • Component/s: hotspot
    • b159
    • generic
    • generic
    • Verified

        interface ArrayAccessInterface {
            default int [] arrayAccess() {
            int a[] =new int[10];
            return a.clone();
           }
        }
        class ArrayAccess implements ArrayAccessInterface {
        public static void main(String args[]){
        int i=0;
        while (i++ < 100000) {
        run();
        }
        }
        public static void run() {
         new ArrayAccess().arrayAccess();
        }

        }





            478 129 4 ArrayAccess::run (12 bytes)
            480 126 3 ArrayAccess::run (12 bytes) made not entrant
            480 129 4 ArrayAccess::run (12 bytes) made not entrant
            484 131 4 ArrayAccess::<init> (5 bytes)
            484 127 3 ArrayAccess::<init> (5 bytes) made not entrant
            484 130 2 ArrayAccess::run (12 bytes)
            485 132 4 ArrayAccessInterface::arrayAccess (13 bytes)
            486 128 3 ArrayAccessInterface::arrayAccess (13 bytes) made not entrant
            486 133 4 ArrayAccess::run (12 bytes)
            487 130 2 ArrayAccess::run (12 bytes) made not entrant
            487 132 4 ArrayAccessInterface::arrayAccess (13 bytes) made not entrant
            488 133 4 ArrayAccess::run (12 bytes) made not entrant
            488 134 3 ArrayAccess::run (12 bytes)
            488 135 3 ArrayAccessInterface::arrayAccess (13 bytes)
            492 136 4 ArrayAccess::run (12 bytes)
            493 134 3 ArrayAccess::run (12 bytes) made not entrant
            493 136 4 ArrayAccess::run (12 bytes) made not entrant
            493 137 3 ArrayAccess::run (12 bytes)
            497 138 4 ArrayAccess::run (12 bytes)
            498 137 3 ArrayAccess::run (12 bytes) made not entrant
            498 139 4 ArrayAccessInterface::arrayAccess (13 bytes)
            498 138 4 ArrayAccess::run (12 bytes) made not entrant
            498 135 3 ArrayAccessInterface::arrayAccess (13 bytes) made not entrant
            498 139 4 ArrayAccessInterface::arrayAccess (13 bytes) made not entrant
            498 140 3 ArrayAccess::run (12 bytes)
            499 141 3 ArrayAccessInterface::arrayAccess (13 bytes)
            502 142 4 ArrayAccess::run (12 bytes)
            504 140 3 ArrayAccess::run (12 bytes) made not entrant
            504 142 4 ArrayAccess::run (12 bytes) made not entrant
            504 143 3 ArrayAccess::run (12 bytes)
            508 144 4 ArrayAccess::run (12 bytes)
            509 143 3 ArrayAccess::run (12 bytes) made not entrant
            509 144 4 ArrayAccess::run (12 bytes) made not entrant
            509 145 3 ArrayAccess::run (12 bytes)
            513 146 4 ArrayAccess::run (12 bytes)
            514 145 3 ArrayAccess::run (12 bytes) made not entrant
            514 146 4 ArrayAccess::run (12 bytes) made not entrant
            514 147 3 ArrayAccess::run (12 bytes)
            519 148 4 ArrayAccess::run (12 bytes)
            520 147 3 ArrayAccess::run (12 bytes) made not entrant
            521 148 4 ArrayAccess::run (12 bytes) made not entrant
            521 149 3 ArrayAccess::run (12 bytes)
            526 150 % 3 ArrayAccess::main @ 2 (18 bytes)
            528 151 4 ArrayAccess::run (12 bytes)
            528 152 3 ArrayAccess::main (18 bytes)
            529 149 3 ArrayAccess::run (12 bytes) made not entrant

              Assignee:
              Jamsheed C M (Inactive)
              Reporter:
              Jamsheed C M (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: