8170455: C2: Access to [].clone from interfaces fails

Passed holder klass to LR for proper resolution.

Reviewed-by: vlivanov